# GeoAI

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: OlmoEarthTutorial.ipynb  test.ipynb
src/kenya_lulc/: __init__.py  definitions.py  olmoearthtutorial.py
