[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kenya_lulc"
version = "0.1.0"
description = "A project to fine-tune GFM for land cover and crop mapping in Kenya"
authors = [{ name = "Charles Mwangi " }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core scientific
    "numpy",
    "pandas",
    "scipy",
    # Geospatial
    "xarray",
    "rasterio",
    "rioxarray",
    "shapely",
    "geopandas",
    "pyproj",
    # Utilities
    "tqdm",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kenya_lulc"]
